# OdriveCANControl

./: README.md  record_data.py
bag_files/: controller1.csv  controller2.csv
bag_files/rosbag2_2024_08_22-12_20_42/: metadata.yaml  rosbag2_2024_08_22-12_20_42_0.db3
bag_files/testing2/: messages.csv  metadata.yaml  testing2_0.db3  topics.csv
bag_files/testing3/: metadata.yaml  testing3_0.db3
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/app_server/lib/app_server/: odrive_server_app
install/app_server/share/app_server/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/bag_recorder_nodes_py/share/bag_recorder_nodes_py/: package.sh  package.xml
install/controller/lib/controller/: FC_node  Impedance_Control  friction_compensation_node  odrive_control  odrive_control_node  odrive_controller
install/controller/share/controller/: package.sh  package.xml
install/custom_msgs/share/custom_msgs/: local_setup.sh  package.sh
install/data_logging/share/data_logging/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/data_sync/lib/data_sync/: data_collection_service
install/data_sync/share/data_sync/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/encoder/lib/encoder/: encoder_read_node
install/encoder/share/encoder/: package.sh  package.xml
install/odrive_botwheel_explorer/share/odrive_botwheel_explorer/: local_setup.sh  package.sh
install/odrive_can/lib/odrive_can/: odrive_can_node
install/odrive_can/share/odrive_can/: local_setup.sh  package.sh
install/odrive_control/share/odrive_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/odrive_control_cpp/lib/odrive_control_cpp/: control_node  (+2 more)
log/: latest_build  latest_list
my_bag/: metadata.yaml  my_bag_0.db3
src/app_server/: package.xml  setup.cfg  setup.py
src/app_server/app_server/: server_node.py
src/bag_recorder_nodes_py/: setup.py
src/controller/: package.xml  setup.py
src/controller/config/: impedance_params.yaml
src/controller/src/controller/: App_trial copy.py  App_trial.py  impedance_control.py  odrive_control.py  testing.py
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: FrictionComp.msg  VariableImpedance
src/custom_msgs/srv/install/: local_setup.sh  setup.ps1  setup.sh
src/custom_msgs/srv/log/: latest_build
src/data_logging/: package.xml  setup.py
src/data_logging/config/: params.yaml
src/data_logging/data_logging/: data_recording_node.py
src/data_sync/: CMakeLists.txt  package.xml
src/data_sync/srv/: Trigger.srv
src/encoder/: package.xml  setup.py
src/encoder/encoder/: encoder_read_node.py
src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/log/: latest_build
src/odrive_control/: CMakeLists.txt  package.xml
src/odrive_control_cpp/: CMakeLists.txt
src/odrive_control_cpp/src/: control_node.cpp  receive_send.cpp  subscribe_send_test.cpp
src/odrive_control_py/: package.xml  setup.cfg  setup.py
src/odrive_control_py/config/: impedance_config.yaml
src/odrive_control_py/odrive_control_py/: FCM_test_node.py  Impedance_test_node copy.py  app_server_node.py  encoder_read_node.py  impedance_control_node.py  matlab_tcp_node_test.py  trial_controlnode.py
src/odrive_control_py/srv/: Trigger.srv
src/robot_launch/: CMakeLists.txt
src/robot_launch/launch/: robot.launch.py
src/testing/: package.xml  setup.py
(+131 files in other folders)
