<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controller</name>
  <version>0.0.0</version>
  <description>ODrive motor control package using ROS2 and CAN</description>
  <maintainer email="vedantchoudhary07@gmail.com">vedant</maintainer>
  <license>Apache License 2.0</license>

  <!-- ROS2 기본 의존성 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>custom_msgs</depend>
  <!-- ODrive 관련 의존성 -->
  <!-- <depend>odrive_can</depend> -->

  <test_depend>pytest</test_depend>

  <!-- 메시지 생성 관련 의존성 -->
  <!-- <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_export_depend>rosidl_default_runtime</build_export_depend> -->

  <!-- 테스트 관련 의존성 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
